changing video link

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <!-- favicons
 	================================================== -->
-    <link rel="shortcut icon" href="foxy_logo_favicon.ico" type="image/x-icon">
-    <link rel="icon" href="foxy_logo_favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 
@@ -82,7 +82,7 @@
                             <span class="icon-circle-down" aria-hidden="true"></span>
                             Download App
                         </a>
-                        <a href="http://player.vimeo.com/video/14592941?title=0&amp;byline=0&amp;portrait=0&amp;color=39b54a" data-lity class="button stroke">
+                        <a href="https://www.youtube.com/watch?v=aZTpZXuN2Ow&feature=youtu.be" data-lity class="button stroke">
                             <span class="icon-play" aria-hidden="true"></span>
                             Watch Video
                         </a>
