Changing play store link

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <h1 class="intro-header"  data-aos="fade-up">Download Our App Today!</h1>
 
                 <ul class="download-badges">
-                    <li><a href="https://play.google.com/store/apps/com.venkat.neolauncher" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
+                    <li><a href="https://play.google.com/store/apps/details?id=com.venkat.neolauncher" title="" class="badge-googleplay" data-aos="fade-up">Play Store</a></li>
                 </ul>
 
             </div>
